Creado mediante Colaboratory

--- a/code/Sentiment_analysis/SVM.ipynb
+++ b/code/Sentiment_analysis/SVM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SVM.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPeIxjjsLywSyjsWFjqzVd7",
+      "authorship_tag": "ABX9TyOHyFAa1CGm4D41yijtJqS+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 260,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
       "source": [
         ""
       ],
-      "execution_count": 260,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
       "source": [
         "data = pd.read_csv('Dataset-with-sentiments_f.csv')"
       ],
-      "execution_count": 261,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -67,12 +67,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3YYdeLgDNZR4",
-        "outputId": "fc3728a0-17e3-404d-9e8a-740b3b1fb02a"
+        "outputId": "f0cc7984-fcd7-42fb-b988-20b55e762368"
       },
       "source": [
         "sum(data['stop_comments'].isnull())"
       ],
-      "execution_count": 262,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -82,7 +82,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 262
+          "execution_count": 3
         }
       ]
     },
@@ -94,7 +94,7 @@
       "source": [
         "data = data[data['stop_comments'].notnull()]"
       ],
-      "execution_count": 263,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -104,12 +104,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SIba_zl2NgNB",
-        "outputId": "e00d357a-9771-4f24-e27a-6697ccb504af"
+        "outputId": "2a29559a-58e5-4c53-bafe-d0b347fdb529"
       },
       "source": [
         "sum(data['stop_comments'].isnull())"
       ],
-      "execution_count": 264,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 264
+          "execution_count": 5
         }
       ]
     },
@@ -131,7 +131,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 265,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
       "source": [
         "X_train,X_test,y_train,y_test = train_test_split(data['stop_comments'],data['pol_cat'],test_size = 0.2,random_state = 324)"
       ],
-      "execution_count": 266,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -152,12 +152,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CMPCz52ANk6z",
-        "outputId": "763c7cde-c61c-49f0-9827-924ebbef0f9c"
+        "outputId": "e94b609a-05fb-44b8-abc9-c4dbf04a1172"
       },
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 267,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +167,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 267
+          "execution_count": 8
         }
       ]
     },
@@ -178,12 +178,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XkXV9IW6Nmrd",
-        "outputId": "4989e21f-9144-48f2-c592-4d0f98d25044"
+        "outputId": "a07406eb-818e-4a15-b3cc-a205a9bf12b5"
       },
       "source": [
         "X_test.shape"
       ],
-      "execution_count": 268,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 268
+          "execution_count": 9
         }
       ]
     },
@@ -204,12 +204,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AIAcoHwYNod6",
-        "outputId": "700aa65e-4410-44f7-c8ca-af9322557ffd"
+        "outputId": "bf6f5e48-7482-4063-9b18-79a500f1eaf6"
       },
       "source": [
         "data['pol_cat'].value_counts()"
       ],
-      "execution_count": 269,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +221,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 269
+          "execution_count": 10
         }
       ]
     },
@@ -245,7 +245,7 @@
         "tf_train = vect.fit_transform(X_train)\n",
         "tf_test = vect.transform(X_test)"
       ],
-      "execution_count": 270,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -255,12 +255,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tipNaNdHPB9e",
-        "outputId": "dbcd36de-6082-4dd3-842b-62bf4ad80c74"
+        "outputId": "162e063d-2667-425b-ac3c-095e63645b45"
       },
       "source": [
         "tf_train"
       ],
-      "execution_count": 271,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +271,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 271
+          "execution_count": 12
         }
       ]
     },
@@ -282,12 +282,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cajxhm3ag00d",
-        "outputId": "f039a229-caed-4674-8993-402ddcc69fb1"
+        "outputId": "709dd22a-aadc-450d-c630-2b35d37deb91"
       },
       "source": [
         "tf_train.toarray()[0].sum()"
       ],
-      "execution_count": 272,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +297,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 272
+          "execution_count": 13
         }
       ]
     },
@@ -308,12 +308,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BeCfNr6tPIyE",
-        "outputId": "5914158a-2793-4704-bff9-18a19b706fea"
+        "outputId": "a137afd3-5933-412f-adbe-3042c1f1a83a"
       },
       "source": [
         "tf_train.shape"
       ],
-      "execution_count": 273,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 273
+          "execution_count": 14
         }
       ]
     },
@@ -344,7 +344,7 @@
       "source": [
         "#vocab = vect.vocabulary_"
       ],
-      "execution_count": 274,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
         "from sklearn import svm\n",
         "from sklearn.metrics import classification_report"
       ],
-      "execution_count": 275,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -367,14 +367,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75a81b59-8f70-4ec0-8672-c2a1173c8ae7"
+        "outputId": "78a68e04-7e38-4f78-8d97-10148826e040"
       },
       "source": [
         "# Perform classification with SVM, kernel=linear\n",
         "classifier_linear = svm.SVC(kernel='linear')\n",
         "classifier_linear.fit(tf_train, y_train)"
       ],
-      "execution_count": 276,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,7 +384,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 276
+          "execution_count": 17
         }
       ]
     },
@@ -394,7 +394,7 @@
         "id": "asEO9XOIPkrN"
       },
       "source": [
-        "**Accuracy score on training dataset**"
+        "**Accuracy score on test dataset**"
       ]
     },
     {
@@ -404,14 +404,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EzKEEqrwPhW2",
-        "outputId": "633f04da-04f1-47a0-b8fd-fb8fe77ef371"
+        "outputId": "79380318-37ba-4f0e-c4f5-c11d3fb04390"
       },
       "source": [
         "prediction_linear = classifier_linear.predict(tf_test)\n",
         "# results\n",
         "print(classification_report(y_test, prediction_linear))"
       ],
-      "execution_count": 277,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +451,7 @@
         "\n",
         "from sklearn import metrics"
       ],
-      "execution_count": 280,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -461,32 +461,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y2wCHWyMP4Mk",
-        "outputId": "6a6558da-4f81-4336-9cb6-25ffe9a222b0"
+        "outputId": "eb24b9d0-4c30-41ca-d9f2-8dc233c9ffe1"
       },
       "source": [
         "pip install mlxtend"
       ],
-      "execution_count": 281,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: mlxtend in /usr/local/lib/python3.7/dist-packages (0.14.0)\n",
-            "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.19.5)\n",
-            "Requirement already satisfied: scipy>=0.17 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.4.1)\n",
             "Requirement already satisfied: matplotlib>=1.5.1 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (3.2.2)\n",
+            "Requirement already satisfied: scipy>=0.17 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.4.1)\n",
             "Requirement already satisfied: scikit-learn>=0.18 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.0.1)\n",
             "Requirement already satisfied: pandas>=0.17.1 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.1.5)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from mlxtend) (57.4.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (0.11.0)\n",
+            "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.19.5)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (1.3.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (2.8.2)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (3.0.6)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (2.8.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (0.11.0)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.17.1->mlxtend) (2018.9)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib>=1.5.1->mlxtend) (1.15.0)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.18->mlxtend) (1.1.0)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.18->mlxtend) (3.0.0)\n"
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.18->mlxtend) (3.0.0)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.18->mlxtend) (1.1.0)\n"
           ]
         }
       ]
@@ -499,10 +499,10 @@
           "height": 313
         },
         "id": "tsjb9fGxP6TR",
-        "outputId": "aab7fa37-f7c0-4d9b-f2bb-f9298807e000"
+        "outputId": "1ab4039e-cb5f-4190-b09d-1a885c7431a0"
       },
       "source": [
-        "cf = metrics.confusion_matrix(expected,predicted,labels = [1,0])\n",
+        "cf = metrics.confusion_matrix(y_test,prediction_linear,labels = [1,0])\n",
         "print(cf)\n",
         "## this command is only for google collab \n",
         "## in the below figure \" 1 is actually showing -1 and 0 is actually showing 1\"\n",
@@ -512,7 +512,7 @@
         "# fig, ax = plot_confusion_matrix(conf_mat = cf, class_names = [1,-1])\n",
         "plt.show()"
       ],
-      "execution_count": 282,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +544,7 @@
       "source": [
         ""
       ],
-      "execution_count": 284,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -564,7 +564,7 @@
       "source": [
         "data_test = pd.read_csv('Video_2/Dataset-with-sentiments.csv')"
       ],
-      "execution_count": 285,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +579,7 @@
       "source": [
         "sum(data_test['stop_comments'].isnull())"
       ],
-      "execution_count": 286,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +601,7 @@
       "source": [
         "data_test = data_test[data_test['stop_comments'].notnull()]"
       ],
-      "execution_count": 287,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +616,7 @@
       "source": [
         "sum(data_test['stop_comments'].isnull())"
       ],
-      "execution_count": 288,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +642,7 @@
       "source": [
         "data_test['pol_cat'].value_counts()"
       ],
-      "execution_count": 289,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +666,7 @@
       "source": [
         "tf_test = vect.transform(data_test['stop_comments'])"
       ],
-      "execution_count": 290,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -681,7 +681,7 @@
       "source": [
         "tf_test"
       ],
-      "execution_count": 291,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -708,7 +708,7 @@
       "source": [
         "tf_test.toarray()[0].sum()"
       ],
-      "execution_count": 292,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +734,7 @@
       "source": [
         "tf_train.toarray().shape"
       ],
-      "execution_count": 293,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -760,7 +760,7 @@
       "source": [
         "tf_test.toarray().shape"
       ],
-      "execution_count": 294,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +782,7 @@
       "source": [
         "predicted = classifier_linear.predict(tf_test)"
       ],
-      "execution_count": 295,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +793,7 @@
       "source": [
         "expected = data_test['pol_cat']"
       ],
-      "execution_count": 296,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -817,7 +817,7 @@
         "# fig, ax = plot_confusion_matrix(conf_mat = cf, class_names = [1,-1])\n",
         "plt.show()"
       ],
-      "execution_count": 297,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +854,7 @@
         "from sklearn import metrics\n",
         "print(metrics.classification_report(expected, predicted))"
       ],
-      "execution_count": 298,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -881,7 +881,7 @@
       "source": [
         ""
       ],
-      "execution_count": 299,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -901,7 +901,7 @@
       "source": [
         "predicted[predicted==0] = -1"
       ],
-      "execution_count": 309,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -916,7 +916,7 @@
       "source": [
         "predicted"
       ],
-      "execution_count": 310,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -943,7 +943,7 @@
         "likes = np.array(list(data_test['Likes']))\n",
         "likes"
       ],
-      "execution_count": 311,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +970,7 @@
         "num_comentarios_pos = sum(predicted[predicted==1])\n",
         "num_comentarios_pos"
       ],
-      "execution_count": 304,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,7 +997,7 @@
         "num_likes_positivos = sum(likes[predicted==1])\n",
         "num_likes_positivos"
       ],
-      "execution_count": 313,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1024,7 +1024,7 @@
         "impacto = (num_comentarios_pos + num_likes_positivos)/(len(predicted) + sum(likes))\n",
         "impacto"
       ],
-      "execution_count": 314,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
         "likes_video = 13626143\n",
         "dislikes_video = 397679"
       ],
-      "execution_count": 318,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1064,7 +1064,7 @@
         "popularidad = likes_video/(likes_video + dislikes_video)\n",
         "popularidad"
       ],
-      "execution_count": 317,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,16 +1082,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "GB1xvvAQHwBy",
-        "outputId": "cb225562-9ec9-4394-bdf6-01cba9cc86b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cb225562-9ec9-4394-bdf6-01cba9cc86b9"
       },
       "source": [
         "skore = 2 / (1/impacto + 1/popularidad)\n",
         "skore"
       ],
-      "execution_count": 324,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1140,7 +1140,7 @@
         "relevancia = (dislikes_video)/(len(predicted) + sum(likes))\n",
         "relevancia"
       ],
-      "execution_count": 322,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
